--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,24 @@
-# docker-compose.yml
-version: "3.8"
-services:
-  cassandra:
-    image: cassandra:latest
-    environment:
-      - CASSANDRA_KEYSPACE=user_db
-    ports:
-      - "9042:9042"
-    networks:
-      - mynetwork
+version: '3.8'
 
+services:
   app:
     build: .
-    environment:
-      - CASSANDRA_HOST=cassandra
-      - CASSANDRA_KEYSPACE=user_db
-      - APP_PORT=8080
     ports:
       - "8080:8080"
     depends_on:
       - cassandra
-    restart: on-failure  # This will restart the app if Cassandra is not ready yet
     networks:
-      - mynetwork
+      - app-network
+
+  cassandra:
+    image: cassandra:latest
+    ports:
+      - "9042:9042"
+    networks:
+      - app-network
+    volumes:
+      - ./init.cql:/docker-entrypoint-initdb.d/init.cql
 
 networks:
-  mynetwork:
+  app-network:
     driver: bridge
